refactor: change class name according to rule 3.3 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .banner-thumb { text-align: center;
 }
 }
-.centered-main-page-element {
+.content-thumb {
     display: block;
     width: 500px;
     margin: 0 auto 0;
