--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+/* Remove default styles */
+.list {
+  margin:0;
+  padding: 0px;
+}
+input{
+  outline:none;
+}
 /* Basic Style */
-body {
+.body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,7 +18,7 @@ body {
     display: block;
     text-align: right;
 }
-.banner-thumb img {
+.banner-img {
     width: 100%;
 }
 .banner-thumb .banner-link {
@@ -34,17 +42,7 @@ body {
 .task-row-wrapper {
     display: flex;
 }
-ul {
-    margin:0;
-    padding: 0px;
-}
-li, h3 {
-    list-style:none;
-}
-input,button{
-    outline:none;
-}
-button {
+.btn {
     background: none;
     border: 0px;
     color: #888;
@@ -52,13 +50,13 @@ button {
     width: 60px;
     font-family: Lato, sans-serif;
     cursor: pointer;
+    outline:none;
 }
-button:hover {
+.btn:hover {
     color: #3a3a3a;
 }
 /* Heading */
-h3,
-label.new-task-label {
+.title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,16 +82,18 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label.new-task-label {
+.new-task-label {
     display: block;
     margin: 0 0 20px;
 }
 .new-task {
     width: 318px;
+    display: inline-block;
+    flex-grow: 1
 }
 
 /* Task list */
-li {
+.task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,47 +102,45 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
-    vertical-align: middle;
-}
 
-li > input[type="checkbox"] {
+.task-item-checkbox {
     margin: 0 10px;
 }
-li > label {
+.task-item-label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.task-item-input{
     width: 226px
 }
-button.delete img {
+
+.delete-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul.completed-tasks label {
+.completed-tasks-label {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-item-input {
     display:none
 }
 
-ul li.edit-mode input[type=text] {
+.task-item.edit-mode .task-item-input {
     display:inline-block;
     width:224px
 }
 
-ul li.edit-mode label {
+.task-item.edit-mode .task-item-label {
     display:none;
 }
