--- a/style.css
+++ b/style.css
@@ -1,146 +1,220 @@
 /* Remove default styles */
 .list {
+
   margin:0;
   padding: 0px;
+
 }
+
 input{
+
   outline:none;
+
 }
+
 /* Basic Style */
 .body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
+
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
+
 }
+
 .banner-thumb {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+
 }
+
 .banner-img {
-    width: 100%;
+
+  width: 100%;
+
 }
+
 .banner-thumb .banner-link {
-    font-family: fantasy, cursive;
+
+  font-family: fantasy, cursive;
+
 }
 
 @media (max-width:768px) {
-.banner-thumb { text-align: center;
+
+  .banner-thumb {
+
+    text-align: center;
+
+  }
+
 }
-}
+
 .content-thumb {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+
 }
+
 .task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
+
 }
+
 .task-row-wrapper {
-    display: flex;
+
+  display: flex;
+
 }
+
 .btn {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
-    outline:none;
+
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+  outline:none;
+
 }
+
 .btn:hover {
-    color: #3a3a3a;
+
+  color: #3a3a3a;
+
 }
+
 /* Heading */
 .title {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+
 }
+
 input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #ddd;
-    background: #fff;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+
 }
+
+
 input[type="text"]:focus {
-    color: #333;
+
+  color: #333;
+
 }
 
 /* New Task */
 .new-task-label {
-    display: block;
-    margin: 0 0 20px;
+
+  display: block;
+  margin: 0 0 20px;
+
 }
+
 .new-task {
-    width: 318px;
-    display: inline-block;
-    flex-grow: 1
+
+  width: 318px;
+  display: inline-block;
+  flex-grow: 1
+
 }
 
 /* Task list */
 .task-item {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .task-item-checkbox {
-    margin: 0 10px;
+
+  margin: 0 10px;
+
 }
+
 .task-item-label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
+
 }
+
 .task-item-input{
-    width: 226px
+
+  width: 226px
+
 }
 
 .delete-img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
+
 }
+
 .delete-img:hover {
-    transform: rotateZ(0);
+
+  transform: rotateZ(0);
+
 }
 
 /* Completed */
 .completed-tasks-label {
-    text-decoration: line-through
-    color: #888;
+
+  text-decoration: line-through
+  color: #888;
+
 }
 
 /* Edit Task */
 .task-item-input {
-    display:none
+
+  display:none
+
 }
 
 .task-item.edit-mode .task-item-input {
-    display:inline-block;
-    width:224px
+
+  display:inline-block;
+  width:224px
+
 }
 
 .task-item.edit-mode .task-item-label {
-    display:none;
+
+  display:none;
+
 }
