--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ input{
 
 }
 
-input[type="text"] {
+.input-txt {
 
   margin: 0;
   font-size: 18px;
@@ -122,7 +122,7 @@ input[type="text"] {
 }
 
 
-input[type="text"]:focus {
+.input-txt:focus {
 
   color: #333;
 
