--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ input {
 
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 
 }
 
@@ -140,7 +140,7 @@ input {
 
   width: 318px;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 
 }
 
@@ -173,7 +173,7 @@ input {
 
 .task-item-input {
 
-  width: 226px
+  width: 226px;
 
 }
 
@@ -194,7 +194,7 @@ input {
 /* Completed */
 .completed-tasks-label {
 
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 
 }
@@ -202,14 +202,14 @@ input {
 /* Edit Task */
 .task-item-input {
 
-  display: none
+  display: none;
 
 }
 
 .task-item.edit-mode .task-item-input {
 
   display: inline-block;
-  width: 224px
+  width: 224px;
 
 }
 
